#488 restructure code - sonar warnings / deprecations